tests/ui/variance/variance-regions-unused-direct.stderr
error[E0392]: lifetime parameter `'a` is never used
  --> $DIR/variance-regions-unused-direct.rs:5:18
   |
LL | struct Bivariant<'a>;
   |                  ^^ unused lifetime parameter
   |
   = help: consider removing `'a`, referring to it in a field, or using a marker such as `PhantomData`

error[E0392]: lifetime parameter `'d` is never used
  --> $DIR/variance-regions-unused-direct.rs:7:19
   |
LL | struct Struct<'a, 'd> {
   |                   ^^ unused lifetime parameter
   |
   = help: consider removing `'d`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0392`.
